# tauri-monopole

./: .deepsource.toml  .eslintrc.js  README.md  package-lock.json  package.json  simulation.config.json
public/: index.html
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cli.rs  cmds.rs  main.rs  structs.rs
src/components/: Actions.vue  Navbar.vue  Scene.vue  Settings.vue
src/js/: FlyControls.js
src/router/: index.js
src/store/: index.js
src/views/: Home.vue
tests/e2e/specs/: test.js
