[package]
name = "tauri-monopole"
version = "0.1.0"
description = "An application built with Vue, Tauri and Three.js to demonstrate the effects of a magnetic monopole"
authors = ["HipyCas <hipycas+monopole@gmail.com>"]
license = "GPL-3.0+"
repository = "https://github.com/HipyCas/tauri-monopole"
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version="1.0.0-beta.0" }

[dependencies]
serde_json = "1.0"
serde = { version="1.0", features=["derive"] }
tauri = { version="1.0.0-beta.1" }

magnetic-monopole = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
